--- a/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
@@ -6,8 +6,8 @@ on:
   #   - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/breeze303/ipq60xx-6.6.git
-  REPO_BRANCH: k6.12-nss
+  REPO_URL: https://github.com/qosmio/openwrt-ipq.git
+  REPO_BRANCH: qualcommax-6.x-nss-wifi-6.9
   CONFIG_FILE: configs/ipq60xx-6.6-wifi(emmc).config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
