--- a/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REPO_URL: https://github.com/qosmio/openwrt-ipq.git
-  REPO_BRANCH: qualcommax-6.x-nss-wifi-6.9
+  REPO_BRANCH: 24.10-nss
   CONFIG_FILE: configs/ipq60xx-6.6-wifi(emmc).config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
