--- a/configs/ipq60xx-6.6-wifi(emmc).config
+++ b/configs/ipq60xx-6.6-wifi(emmc).config
@@ -217,3 +217,42 @@ CONFIG_ZRAM_DEF_COMP_LZORLE=y
 CONFIG_PACKAGE_jansson=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-nf-flow=y
+
+# ==== 下面是我为你添加/修改的条目 ====
+
+## 保留并启用 NFS 支持（你要求保留 NFS）
+CONFIG_PACKAGE_kmod-fs-nfs=y
+CONFIG_PACKAGE_kmod-fs-nfs-v4=y
+CONFIG_PACKAGE_kmod-fs-nfsd=y
+CONFIG_PACKAGE_luci-app-nfs=y
+CONFIG_PACKAGE_luci-i18n-nfs-zh-cn=y
+
+## 添加 Samba4 (SMB)
+CONFIG_PACKAGE_samba4-server=y
+CONFIG_PACKAGE_samba4-client=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+
+## 去掉 FTP 服务（把常见 FTP 服务设为 n）
+CONFIG_PACKAGE_vsftpd=n
+CONFIG_PACKAGE_proftpd=n
+CONFIG_PACKAGE_luci-app-ftp=n
+
+## KMS (vlmcsd)
+CONFIG_PACKAGE_vlmcsd=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
+
+## Passwall2 + SSR Plus （需要对应 feeds）
+CONFIG_PACKAGE_luci-app-passwall2=y
+CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
+
+## Tailscale（Headscale 的 client）
+CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_tailscaled=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+
+# 其余保持你原来的配置（不重复写出）
